style(stepper): fix body header misalignment

--- a/src/components/stepper/themes/step/step.base.scss
+++ b/src/components/stepper/themes/step/step.base.scss
@@ -12,6 +12,8 @@
 }
 
 :host([content-top]) {
+    align-items: flex-end;
+
     [part~='header-container'] {
         grid-row-start: 2;
     }
